# horse_stable

./: .gitignore  .prettierignore  .prettierrc  README.md  bun.lockb  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  load.html  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: db.rs  lib.rs  main.rs  services.rs
src-tauri/src/db/: queries.rs  tables.rs
src-tauri/src/models/: horse.rs  mod.rs  stable.rs
src-tauri/src/scripts/: mod.rs
src-tauri/src/services/: horse.rs  stable.rs  user.rs
src/lib/: Files.svelte  Greet.svelte  Horse-Card.svelte  Horses.svelte  ipc.defaults.ts  ipc.svelte.ts
src/lib/components/: Horse-Card.svelte
src/routes/: +layout.svelte  +page.svelte  app.css  auth.svelte.ts
src/routes/(auth)/: +layout.svelte  +page.svelte
src/routes/(auth)/stable/[id]/horse-add/: +page.svelte
src/routes/(auth)/stable/[id]/horse/[horse_id]/: +page.svelte
src/routes/(noauth)/: +layout.svelte
src/routes/(noauth)/contact-us/: +page.svelte
src/routes/(noauth)/login/: +page.svelte
src/routes/(noauth)/register/: +page.svelte
src/routes/horses/: +page.svelte
src/routes/login/: +page.svelte
src/routes/register/: +page.svelte
src/routes/stable-create/: +page.svelte
src/routes/stable/[id]/: +page.svelte
src/routes/stable/[id]/horse/[horse_id]/: +page.svelte  +page.ts
src/types/: index.ts
